# gotstopwords

./: LICENSE  README.md  pyproject.toml
src/got-stop-words/: banks.py  codes.py  config.py  got-stop-words.py
src/got-stop-words/data/other/: greek  hindi1  latvian
src/gotstopwords/: gotstopwords.py  iso6391codes.py
src/gotstopwords/data/other/: polish1
