[project]
name = "stop-words-lists-for-python-nlp"
version = "1.0"
authors = [
  { name="Picture In The Noise", email="pictureinthenoise@protonmail.com" },
]
description = "Python package that simplifies the use of stop word lists in multiple languages."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pictureinthenoise/got-stop-words"
"Bug Tracker" = "https://github.com/pictureinthenoise/got-stop-words/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"