[project]
name = "gotstopwords"
version = "1.0.7"
authors = [
  { name="pictureinthenoise", email="pictureinthenoise@protonmail.com" },
]
description = "Package that simplifies the use of stop words lists with Python NLP projects in 36 languages."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pictureinthenoise/gotstopwords"
"Bug Tracker" = "https://github.com/pictureinthenoise/gotstopwords/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"